--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -73,8 +73,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)\bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)\middle directory\</IntDir>
-    <IncludePath>D:\Program Files\MySQL\MySQL Server 8.0\include</IncludePath>
-    <LibraryPath>D:\Program Files\MySQL\MySQL Server 8.0\lib</LibraryPath>
+    <IncludePath>D:\Program Files\MySQL\MySQL Server 8.0\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Program Files\MySQL\MySQL Server 8.0\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
