--- a/ClientQ/Makefile.Release
+++ b/ClientQ/Makefile.Release
@@ -529,6 +529,7 @@ bin\release\moc\moc_imsystem.cpp: src\imsystem.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qobject_impl.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qbindingstorage.h \
 		src\client.h \
+		src\Message.h \
 		src\mainwindow.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QMainWindow \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qmainwindow.h \
@@ -808,6 +809,7 @@ bin\release\objects\main.obj: src\main.cpp D:\QT\6.8.0\msvc2019_64\include\QtWid
 		src\imsystem.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\QObject \
 		src\client.h \
+		src\Message.h \
 		src\mainwindow.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QMainWindow \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qmainwindow.h \
@@ -1029,33 +1031,16 @@ bin\release\objects\mainwindow.obj: src\mainwindow.cpp src\mainwindow.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtGui\qguiapplication_platform.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qtabwidget.h \
 		bin\release\ui\ui_mainwindow.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtCore\QVariant \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QApplication \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qapplication.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QLabel \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qlabel.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qframe.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtGui\qpicture.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtGui\qtextdocument.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QLineEdit \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qlineedit.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtGui\qtextcursor.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtGui\qtextformat.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtGui\qpen.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtGui\qtextoption.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QMenuBar \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qmenubar.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qmenu.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QPushButton \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qpushbutton.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qabstractbutton.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QWidget \
 		D:\QT\6.8.0\msvc2019_64\include\QtGui\QScreen \
 		D:\QT\6.8.0\msvc2019_64\include\QtGui\QImage \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\QDebug \
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QPushButton \
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qpushbutton.h \
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qabstractbutton.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\QString
 
 bin\release\objects\client.obj: src\client.cpp src\client.h \
+		src\Message.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\QDebug \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qdebug.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qcontainerfwd.h \
@@ -1162,8 +1147,7 @@ bin\release\objects\client.obj: src\client.cpp src\client.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qshareddata_impl.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qset.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qhash.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtCore\qvarlengtharray.h \
-		src\Message.h
+		D:\QT\6.8.0\msvc2019_64\include\QtCore\qvarlengtharray.h
 
 bin\release\objects\imsystem.obj: src\imsystem.cpp src\imsystem.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\QObject \
@@ -1267,6 +1251,7 @@ bin\release\objects\imsystem.obj: src\imsystem.cpp src\imsystem.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qobject_impl.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qbindingstorage.h \
 		src\client.h \
+		src\Message.h \
 		src\mainwindow.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QMainWindow \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qmainwindow.h \
@@ -1355,7 +1340,8 @@ bin\release\objects\imsystem.obj: src\imsystem.cpp src\imsystem.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtGui\qinputmethod.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\qlocale.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtGui\qguiapplication_platform.h \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qtabwidget.h
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qtabwidget.h \
+		D:\QT\6.8.0\msvc2019_64\include\QtCore\QDebug
 
 bin\release\objects\qrc_Image.obj: release\qrc_Image.cpp 
 
