--- a/ClientQ/Makefile.Release
+++ b/ClientQ/Makefile.Release
@@ -4342,7 +4342,159 @@ bin\release\objects\videointerface.obj: src\videointerface.cpp src\videointerfac
 		bin\release\ui\ui_videointerface.h \
 		D:\QT\6.8.0\msvc2019_64\include\QtCore\QVariant \
 		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QApplication \
-		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qapplication.h
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qapplication.h \
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\QLabel \
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qlabel.h \
+		D:\QT\6.8.0\msvc2019_64\include\QtWidgets\qframe.h \
+		D:\QT\6.8.0\msvc2019_64\include\QtGui\qpicture.h \
+		D:\QT\6.8.0\msvc2019_64\include\QtGui\qtextdocument.h \
+		src\imsystemopencv.h \
+		include\ffmpeg\libavdevice\avdevice.h \
+		include\ffmpeg\libavdevice\version_major.h \
+		include\ffmpeg\libavdevice\version.h \
+		include\ffmpeg\libavutil\version.h \
+		include\ffmpeg\libavutil\macros.h \
+		include\ffmpeg\libavutil\avconfig.h \
+		include\ffmpeg\libavutil\log.h \
+		include\ffmpeg\libavutil\attributes.h \
+		include\ffmpeg\libavutil\opt.h \
+		include\ffmpeg\libavutil\rational.h \
+		include\ffmpeg\libavutil\avutil.h \
+		include\ffmpeg\libavutil\common.h \
+		include\ffmpeg\libavutil\error.h \
+		include\ffmpeg\libavutil\mem.h \
+		include\ffmpeg\libavutil\mathematics.h \
+		include\ffmpeg\libavutil\intfloat.h \
+		include\ffmpeg\libavutil\pixfmt.h \
+		include\ffmpeg\libavutil\channel_layout.h \
+		include\ffmpeg\libavutil\dict.h \
+		include\ffmpeg\libavutil\samplefmt.h \
+		include\ffmpeg\libavformat\avformat.h \
+		include\ffmpeg\libavcodec\codec_par.h \
+		include\ffmpeg\libavcodec\codec_id.h \
+		include\ffmpeg\libavcodec\version_major.h \
+		include\ffmpeg\libavcodec\defs.h \
+		include\ffmpeg\libavcodec\packet.h \
+		include\ffmpeg\libavutil\buffer.h \
+		include\ffmpeg\libavformat\avio.h \
+		include\ffmpeg\libavformat\version_major.h \
+		include\ffmpeg\libavformat\version.h \
+		include\ffmpeg\libavutil\frame.h \
+		include\ffmpeg\libavcodec\codec.h \
+		include\ffmpeg\libavutil\hwcontext.h \
+		include\opencv2\opencv.hpp \
+		include\opencv2\opencv_modules.hpp \
+		include\opencv2\core.hpp \
+		include\opencv2\core\cvdef.h \
+		include\opencv2\core\version.hpp \
+		include\opencv2\core\hal\interface.h \
+		include\opencv2\core\cv_cpu_dispatch.h \
+		include\opencv2\core\cv_cpu_helper.h \
+		include\opencv2\core\hal\msa_macros.h \
+		include\opencv2\core\fast_math.hpp \
+		include\opencv2\core\base.hpp \
+		include\opencv2\core\cvstd.hpp \
+		include\opencv2\core\cvstd_wrapper.hpp \
+		include\opencv2\core\neon_utils.hpp \
+		include\opencv2\core\vsx_utils.hpp \
+		include\opencv2\core\check.hpp \
+		include\opencv2\core\traits.hpp \
+		include\opencv2\core\matx.hpp \
+		include\opencv2\core\saturate.hpp \
+		include\opencv2\core\matx.inl.hpp \
+		include\opencv2\core\types.hpp \
+		include\opencv2\core\mat.hpp \
+		include\opencv2\core\bufferpool.hpp \
+		include\opencv2\core\mat.inl.hpp \
+		include\opencv2\core\persistence.hpp \
+		include\opencv2\core\operations.hpp \
+		include\opencv2\core\cvstd.inl.hpp \
+		include\opencv2\core\utility.hpp \
+		include\opencv2\core\utils\instrumentation.hpp \
+		include\opencv2\core\utils\tls.hpp \
+		include\opencv2\core\optim.hpp \
+		include\opencv2\core\ovx.hpp \
+		include\opencv2\calib3d.hpp \
+		include\opencv2\features2d.hpp \
+		include\opencv2\flann\miniflann.hpp \
+		include\opencv2\flann\defines.h \
+		include\opencv2\flann\config.h \
+		include\opencv2\core\affine.hpp \
+		include\opencv2\core\utils\logger.hpp \
+		include\opencv2\core\utils\logger.defines.hpp \
+		include\opencv2\core\utils\logtag.hpp \
+		include\opencv2\dnn.hpp \
+		include\opencv2\dnn\dnn.hpp \
+		include\opencv2\core\async.hpp \
+		include\opencv2\dnn\version.hpp \
+		include\opencv2\dnn\dict.hpp \
+		include\opencv2\dnn\layer.hpp \
+		include\opencv2\dnn\dnn.inl.hpp \
+		include\opencv2\dnn\utils\inference_engine.hpp \
+		include\opencv2\flann.hpp \
+		include\opencv2\flann\flann_base.hpp \
+		include\opencv2\flann\general.h \
+		include\opencv2\flann\matrix.h \
+		include\opencv2\flann\params.h \
+		include\opencv2\flann\any.h \
+		include\opencv2\flann\saving.h \
+		include\opencv2\flann\nn_index.h \
+		include\opencv2\flann\result_set.h \
+		include\opencv2\flann\all_indices.h \
+		include\opencv2\flann\kdtree_index.h \
+		include\opencv2\flann\dynamic_bitset.h \
+		include\opencv2\flann\dist.h \
+		include\opencv2\flann\heap.h \
+		include\opencv2\flann\allocator.h \
+		include\opencv2\flann\random.h \
+		include\opencv2\flann\kdtree_single_index.h \
+		include\opencv2\flann\kmeans_index.h \
+		include\opencv2\flann\logger.h \
+		include\opencv2\flann\composite_index.h \
+		include\opencv2\flann\linear_index.h \
+		include\opencv2\flann\hierarchical_clustering_index.h \
+		include\opencv2\flann\lsh_index.h \
+		include\opencv2\flann\lsh_table.h \
+		include\opencv2\flann\autotuned_index.h \
+		include\opencv2\flann\ground_truth.h \
+		include\opencv2\flann\index_testing.h \
+		include\opencv2\flann\timer.h \
+		include\opencv2\flann\sampling.h \
+		include\opencv2\highgui.hpp \
+		include\opencv2\imgcodecs.hpp \
+		include\opencv2\videoio.hpp \
+		include\opencv2\imgproc.hpp \
+		include\opencv2\imgproc\segmentation.hpp \
+		include\opencv2\ml.hpp \
+		include\opencv2\ml\ml.inl.hpp \
+		include\opencv2\objdetect.hpp \
+		include\opencv2\objdetect\aruco_detector.hpp \
+		include\opencv2\objdetect\aruco_dictionary.hpp \
+		include\opencv2\objdetect\aruco_board.hpp \
+		include\opencv2\objdetect\graphical_code_detector.hpp \
+		include\opencv2\objdetect\detection_based_tracker.hpp \
+		include\opencv2\objdetect\face.hpp \
+		include\opencv2\objdetect\charuco_detector.hpp \
+		include\opencv2\objdetect\barcode.hpp \
+		include\opencv2\photo.hpp \
+		include\opencv2\stitching.hpp \
+		include\opencv2\stitching\warpers.hpp \
+		include\opencv2\stitching\detail\warpers.hpp \
+		include\opencv2\core\cuda.hpp \
+		include\opencv2\core\cuda_types.hpp \
+		include\opencv2\core\cuda.inl.hpp \
+		include\opencv2\stitching\detail\warpers_inl.hpp \
+		include\opencv2\stitching\detail\matchers.hpp \
+		include\opencv2\stitching\detail\motion_estimators.hpp \
+		include\opencv2\stitching\detail\util.hpp \
+		include\opencv2\stitching\detail\util_inl.hpp \
+		include\opencv2\stitching\detail\camera.hpp \
+		include\opencv2\stitching\detail\exposure_compensate.hpp \
+		include\opencv2\stitching\detail\seam_finders.hpp \
+		include\opencv2\stitching\detail\blenders.hpp \
+		include\opencv2\video.hpp \
+		include\opencv2\video\tracking.hpp \
+		include\opencv2\video\background_segm.hpp
 
 bin\release\objects\qrc_Image.obj: release\qrc_Image.cpp 
 
